[metadata]
name = gen2-connector
version = 1.0.0b67
author = kpavel, cohen-j-omer
author_email = omer.cohen@ibm.com
description = Ray gen2 node provider
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/project-codeflare/gen2-connector
classifiers =
    Programming Language :: Python :: 3

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.6
scripts =
    bin/vpc-config
install_requires =
    ibm_vpc

[options.packages.find]
where = src

[options.data_files]
/etc/gen2-connector =
    templates/defaults.yaml
    templates/example-minimal.yaml
