[metadata]
name = ibm-vpc-ray-connector
version = 1.0.0b70
author = kpavel, cohen-j-omer
author_email = omer.cohen@ibm.com
description = IBM VPC connector for Ray
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/project-codeflare/ibm-vpc-ray-connector
classifiers =
    Programming Language :: Python :: 3

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.6
install_requires =
    ibm_vpc

[options.packages.find]
where = src

[options.data_files]
/etc/ibm-vpc-ray-connector =
    templates/defaults.yaml
    templates/example-minimal.yaml
